# Practice

./: README.md
.vscode copy/: settings.json
OpenRM2024-gkd-main/src/kalman/: antitopV3.cpp  trackqueueV4.cpp
OpenRM2024-gkd-main/terminal/src/: main.cpp
Python_practice/: Unvrate_linear_regression.py  basic_grammar.py  dict.py  list.py  tuple.py
RMvision_forward_gpu-master/: .gitignore  CMakeLists.txt  build.sh  readme.md
RMvision_forward_gpu-master/config/: camera_paramets.yaml  config.yaml
RMvision_forward_gpu-master/models/RMyolo-v7-new-fp32/: RMyolov7-new.xml
RMvision_forward_gpu-master/models/RMyolov7-best-fp32/: rmyolo-v7-best.xml
RMvision_forward_gpu-master/models/rmyolo-v7-best/: distilbert.xml
RMvision_forward_gpu-master/src/: HIKdriver.cpp  HIKdriver.hpp  PNPsolver.cpp  PNPsolver.hpp  antitopV3.h  cam_calibration.cpp  cam_calibration.hpp  ekf.h  ekf_timer.cpp  ekf_timer.hpp  kf.h  main.cpp  parameter_loader.cpp  parameter_loader.hpp  rmyolov7_inference.cpp  rmyolov7_inference.h  send_control.cpp  send_control.hpp  slidestd.hpp  slideweighted.hpp  test.code-workspace
TJURM-2024-gkd-main/: CMakeLists.txt  README.md  debug.txt  debug1.txt  debug3.txt  run.sh
TJURM-2024-gkd-main/include/data_manager/: base.h
TJURM-2024-gkd-main/include/send_control/: send_control.hpp  socket_interface.hpp
TJURM-2024-gkd-main/include/threads/: pipeline.h
TJURM-2024-gkd-main/libs/RMvision_forward/: .gitignore  CMakeLists.txt  Grid-v1-10x8.3mf  readme.md
TJURM-2024-gkd-main/libs/RMvision_forward/config/hero/: camera_extrinsics.yaml  camera_intrinsics.yaml  config.yaml
TJURM-2024-gkd-main/libs/RMvision_forward/config/infantry/: camera_extrinsics.yaml  config.yaml
TJURM-2024-gkd-main/libs/RMvision_forward/config/sentry_l/: camera_extrinsics.yaml  camera_intrinsics.yaml  config.yaml
TJURM-2024-gkd-main/libs/RMvision_forward/config/sentry_r/: camera_extrinsics.yaml  config.yaml
TJURM-2024-gkd-main/libs/RMvision_forward/models/RMyolo-v7-new/: RMyolov7-new.xml
TJURM-2024-gkd-main/libs/RMvision_forward/models/Rmyolo-v7-latest/: rmyolov7-latest.xml
TJURM-2024-gkd-main/libs/RMvision_forward/src/: HIKdriver.cpp  HIKdriver.hpp  PNPsolver.cpp  PNPsolver.hpp  cam_calibration.cpp  cam_calibration.hpp  core.cpp  parameter_loader.cpp  parameter_loader.hpp  rmyolov7_inference.cpp  rmyolov7_inference.h  timer.hpp
TJURM-2024-gkd-main/src/: main.cpp
TJURM-2024-gkd-main/src/data_manager/: CMakeLists.txt  base.cpp  init.cpp
TJURM-2024-gkd-main/src/garage/: wrapper_car.cpp
TJURM-2024-gkd-main/src/send_control/: send_control.cpp  socket_interface.cpp
TJURM-2024-gkd-main/src/threads/: CMakeLists.txt  control.cpp  pipeline.cpp
TJURM-2024-gkd-main/src/threads/control/: receive_thread.cpp  send_thread.cpp
TJURM-2024-gkd-main/src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
TJURM-2024-gkd-main/src/threads/pipeline/baseline/tracker/: locater.cpp  pointer.cpp  updater.cpp
TJURM-2024-gkd-main/src/threads/pipeline/fourpoints/: detector_thread.cpp  preprocessor_thread.cpp
TJURM-2024-gkd-main/src/threads/pipeline/rune/: detector_thread.cpp  preprocessor_thread.cpp
deepLearning_programe/: linier_regresion.ipynb  linier_regression_multyW.ipynb
kalman_practice/: 1dimen_kalmem.cpp  2dimen_kalmen.cpp  2kalmen  3dimen_rotated_target.cpp  kalmem
yolo_practice/simple_recongnition/: CMakeLists.txt  simple_recognition.cpp  yolo_camera
yolo_practice/simple_recongnition/Camera/: camera_test  camera_test.cpp
